--- a/Users/imeld/OneDrive/Documents/code_kuliah/PBO/1Tubes/tubes/src/main/resources/templates/index.html
+++ b/Users/imeld/OneDrive/Documents/code_kuliah/PBO/1Tubes/tubes/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <!-- <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <!-- <link rel="stylesheet" th:href="@{/css/style.css}"/> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -193,27 +193,10 @@
 
     <header id="header" class="site-header">
 
-      <div class="top-info border-bottom d-none d-md-block ">
-        <div class="container-fluid">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <p class="fs-6 my-2 text-center">Need any help? Call us <a href="#">112233344455</a></p>
-            </div>
-            <div class="col-md-4 border-start border-end">
-              <p class="fs-6 my-2 text-center">Summer sale discount off 60% off! <a class="text-decoration-underline"
-                  href="index.html">Shop Now</a></p>
-            </div>
-            <div class="col-md-4">
-              <p class="fs-6 my-2 text-center">2-3 business days delivery & free returns</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <nav id="header-nav" class="navbar navbar-expand-lg py-3">
         <div class="container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/main-logo.png" class="logo">
+            <img src="../assets/BookNestFix.png" class="logo">
           </a>
           <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -266,10 +249,10 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="index.html">Forum</a>
+                  <a class="nav-link me-4" href="forum.html">Forum</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-4" href="index.html">MyBooks</a>
+                  <a class="nav-link me-4" href="mybooks.html">MyBooks</a>
                 </li>
               </ul>
               <div class="user-items d-flex">
